--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,3 @@
-
 upstream kensens {
     server app_portfolio_website:8000;
 }
@@ -8,6 +7,31 @@ server {
     server_name  www.kensens.com.tr kensens.com.tr;
     server_tokens off;
     client_max_body_size 15M;
+
+    location / {
+        proxy_pass http://kensens;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+    }
+}
+
+server {
+    listen       80;
+    server_name  admin.kensens.com.tr;
+
+    location / {
+        proxy_pass http://kensens;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+    }
+}
+
+server {
+    listen       80;
+    server_name  admin.localhost;
+
     location / {
         proxy_pass http://kensens;
         proxy_set_header Host $host;
