--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ upstream kensens {
 
 server {
     listen       80;
-    server_name  www.kensens.com.tr kensens.com.tr;
+    server_name  www.kensens.com.tr kensens.com.tr, www.keremboylu.com, keremboylu.com;
     server_tokens off;
     client_max_body_size 15M;
 
